s3-db-app-ecs/modules/ecs/target_groups.tf
resource "aws_lb_target_group" "tg" {
  count       = length (var.app_info)
  name        = "${var.env_name}-${var.tag_name_prefix}-tg-${var.app_info[count.index].name}"
  target_type = "ip"
  port        = var.app_info[count.index].port
  protocol    = "HTTP"
  vpc_id      = var.vpc_id
  health_check{
    path        = "/${var.app_info[count.index].name}"
  }

}

/*resource "aws_lb_target_group_attachment" "db_target" {
  target_group_arn = aws_lb_target_group.tg_db.arn
  target_id        = aws_instance.ec2_db.id
  port             = 5000
}*/
